<resources>
    <string name="app_name">Star Wars</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="mass_d">Mass: %s</string>
    <string name="height_d">Height: %s</string>
    <string name="hair_color_s">Hair color: %s</string>
    <string name="skin_color_s">Skin color: %s</string>
    <string name="eye_color_s">Eye color: %s</string>
    <string name="gender_s">Gender: %s</string>
    <string name="films">Films</string>
    <string name="keyboard_backspace">Keyboard backspace</string>
</resources>